# namigator-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: general.yml  release.yml
namigator/: CHANGELOG.md  Cargo.toml  README.md  release.toml
namigator-rs/: Cargo.toml
namigator-rs/src/: build.rs  error.rs  lib.rs  test.rs
namigator-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  release.toml
namigator-sys/src/: lib.rs  test.rs
namigator/src/: build.rs  error.rs  lib.rs  pathfind.rs  test.rs  util.rs
