[package]
name = "namigator"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the namigator pathfinding library for World of Warcraft."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gtker/namigator-rs"
keywords = ["namigator", "pathfinding", "wow", "world-of-warcraft", "line-of-sight"]
categories = ["game-development", "api-bindings"]
readme = "README.md"
authors = ["Gtker <github@gtker.com"]
rust-version = "1.64.0"

[features]
vanilla = ["wow_world_base/vanilla", "wow_world_base/extended"]
tbc = ["wow_world_base/tbc", "wow_world_base/extended"]
wrath = ["wow_world_base/wrath", "wow_world_base/extended"]

[dependencies]
namigator-sys = {path = "../namigator-sys"}
wow_world_base = { git="https://github.com/gtker/wow_messages.git", rev = "e8dc643aea0647083e5f5a1fa6d2c5e4fb274d08", features = ["shared"]}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
