[package]
name = "namigator"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the namigator pathfinding library for World of Warcraft."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gtker/namigator-rs"
keywords = ["namigator", "pathfinding", "wow", "world-of-warcraft", "line-of-sight"]
categories = ["game-development", "api-bindings"]
readme = "README.md"
authors = ["Gtker <github@gtker.com"]
rust-version = "1.64.0"

[features]
vanilla = ["wow_world_base/vanilla", "wow_world_base/extended"]
tbc = ["wow_world_base/tbc", "wow_world_base/extended"]
wrath = ["wow_world_base/wrath", "wow_world_base/extended"]

[dependencies]
namigator-sys = { version = "0.2.0", path = "../namigator-sys"}

[dependencies.wow_world_base]
git = "https://github.com/gtker/wow_messages.git"
rev = "fa60daf84efcca13dafe544446f7d8dd70a77fd2"
features = ["shared"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
